--- a/src/App.scss
+++ b/src/App.scss
@@ -61,24 +61,22 @@ section {
     cursor: pointer;
     text-decoration: none;
     height: 9px !important;
-    margin: 7px 0 7px 21px;
     background-color: #222;
     transition: 0.4s;
     &:hover {
-      transition: 0.1s;
-      transform-origin: right;
+        transition: 0.1s;
+        transform-origin: right;
         transform: scaleX(4);
     }
 }
 #fp-nav ul li a.active {
-  transform: scaleX(calc(10 / 3));
-  transform-origin: right;
-  transition: 0.1s;
-  background-color: #f93!important;
-  &:hover {
-    transform: scaleX(4);
-  }
-
+    transform: scaleX(calc(10 / 3));
+    transform-origin: right;
+    transition: 0.1s;
+    background-color: #f93 !important;
+    &:hover {
+        transform: scaleX(4);
+    }
 }
 #fp-nav ul li,
 .fp-slidesNav ul li {
@@ -112,12 +110,12 @@ section {
     right: 100px !important;
 }
 @font-face {
-    font-family: 'Roboto-Bold';
-    src: url('./Assets/fonts/Roboto-Bold.ttf');
+    font-family: "Roboto-Bold";
+    src: url("./Assets/fonts/Roboto-Bold.ttf");
 }
 @font-face {
-    font-family: 'Roboto-Light';
-    src: url('./Assets/fonts/Roboto-Light.ttf');
+    font-family: "Roboto-Light";
+    src: url("./Assets/fonts/Roboto-Light.ttf");
 }
 @media screen and (max-width: 767.98px) {
     #fp-nav.fp-right {
