--- a/src/components/Pages/HomePage/ThirdPage/thirdPage.scss
+++ b/src/components/Pages/HomePage/ThirdPage/thirdPage.scss
@@ -57,11 +57,6 @@
             transition: all 0.2s !important;
             padding: 0 30px;
             box-sizing: border-box;
-            &:nth-child(4){
-                .title{
-                    color: #ff9933;
-                }
-            }
             @media (max-width: 840px) {
                 width: 100%;
                 height: 15%;
@@ -86,14 +81,13 @@
                     }
                 }
                 .title_fourth {
-                    color: #ff9933;
+                    color: #ff9933 !important;
                 }
                 .desc {
                     opacity: 0;
-                    font-size: 19px;
+                    font-size: 19.5px;
                     line-height: 27px;
-                    font-family: "Noto Sans KR";
-                    font-weight: 100;
+                    font-family: "Roboto-Light";
                     @media (max-width: 840px) {
                         font-size: 13px;
                         line-height: 23px;
@@ -122,7 +116,6 @@
         }
     }
 }
-
 @media screen and (max-width: 1540px) and (min-width: 988px) {
     .page-three {
         .logo {
@@ -152,7 +145,6 @@
         }
     }
 }
-
 @media screen and (max-width: 987px) and (min-width: 840px) {
     .page-three {
         height: 100vh;
