--- a/src/App.scss
+++ b/src/App.scss
@@ -109,6 +109,11 @@ section {
 #fp-nav.fp-right {
     right: 100px !important;
 }
+#fp-nav.fp-right {
+    ul {
+        transform: translateX(25%);
+    }
+}
 @font-face {
     font-family: "Roboto-Bold";
     src: url("./Assets/fonts/Roboto-Bold.ttf");
