--- a/src/components/Pages/HomePage/FirstPage/firstPage.scss
+++ b/src/components/Pages/HomePage/FirstPage/firstPage.scss
@@ -44,7 +44,7 @@
                 margin-left: 10%;
                 width: 100%;
                 height: 100%;
-                .title {
+                .title-page-one {
                     top: 70px;
                     font-size: 95.5px;
                     font-weight: bold;
@@ -53,7 +53,7 @@
                     position: relative;
                     font-family: "Roboto-Bold";
                 }
-                .subTitle {
+                .subTitle-page-one {
                     top: 85px;
                     position: relative;
                     font-size: 20.5px;
@@ -62,7 +62,7 @@
                     color: #222;
                     white-space: pre-line;
                 }
-                .note {
+                .note-page-one {
                     top: 170px;
                     position: relative;
                     font-size: 20.5px;
@@ -73,61 +73,61 @@
             }
             @media (max-width: 1024px) {
                 .content-container {
-                    .title {
+                    .title-page-one {
                         font-size: 70px;
                         margin-top: 50px;
                         line-height: 104.5px;
                     }
-                    .note {
+                    .note-page-one {
                         width: 45%;
                     }
                 }
             }
             @media (max-width: 768px) {
                 .content-container {
-                    .title {
+                    .title-page-one {
                         font-size: 50px;
                         line-height: 1;
                     }
-                    .subTitle,
-                    .note {
+                    .subTitle-page-one,
+                    .note-page-one {
                         font-size: 15px;
                     }
-                    .note {
+                    .note-page-one {
                         width: 80%;
                     }
                 }
             }
             @media (max-width: 568px) {
                 .content-container {
-                    .title {
+                    .title-page-one {
                         font-size: 40px;
                         line-height: 0.8;
                     }
-                    .subTitle,
-                    .note {
+                    .subTitle-page-one,
+                    .note-page-one {
                         font-size: 14px;
                     }
-                    .note {
+                    .note-page-one {
                         width: 50%;
                     }
                 }
             }
             @media (max-width: 400px) {
                 .content-container {
-                    .title {
+                    .title-page-one {
                         font-size: 30px;
                         line-height: 0.8;
                     }
-                    .subTitle,
-                    .note {
+                    .subTitle-page-one,
+                    .note-page-one {
                         font-size: 14px;
                     }
                 }
             }
             @media (max-width: 320px) {
                 .content-container {
-                    .title {
+                    .title-page-one {
                         font-size: 27px;
                         line-height: 0.8;
                     }
@@ -137,20 +137,20 @@
                 }
             }
             .content-container.en {
-                .title {
+                .title-page-one {
                     margin-top: 30px;
                 }
-                .subTitle,
-                .note {
+                .subTitle-page-one,
+                .note-page-one {
                     font-family: "Roboto-Light", sans-serif;
                 }
             }
             .content-container.ko {
-                .title {
+                .title-page-one {
                     margin-top: 5px;
                 }
-                .subTitle,
-                .note {
+                .subTitle-page-one,
+                .note-page-one {
                     font-family: "noto-sans-cjk-kr-light, sans-serif";
                 }
             }
