--- a/src/components/Pages/HomePage/FirstPage/firstPage.scss
+++ b/src/components/Pages/HomePage/FirstPage/firstPage.scss
@@ -53,7 +53,7 @@
                     position: relative;
                     font-family: "Roboto-Bold";
                 }
-                .subTitle-page-one {
+                .subTitle {
                     top: 85px;
                     position: relative;
                     font-size: 20.5px;
@@ -89,7 +89,7 @@
                         font-size: 50px;
                         line-height: 1;
                     }
-                    .subTitle-page-one,
+                    .subTitle,
                     .note-page-one {
                         font-size: 15px;
                     }
@@ -104,7 +104,7 @@
                         font-size: 40px;
                         line-height: 0.8;
                     }
-                    .subTitle-page-one,
+                    .subTitle,
                     .note-page-one {
                         font-size: 14px;
                     }
@@ -119,7 +119,7 @@
                         font-size: 30px;
                         line-height: 0.8;
                     }
-                    .subTitle-page-one,
+                    .subTitle,
                     .note-page-one {
                         font-size: 14px;
                     }
@@ -140,7 +140,7 @@
                 .title-page-one {
                     margin-top: 30px;
                 }
-                .subTitle-page-one,
+                .subTitle,
                 .note-page-one {
                     font-family: "Roboto-Light", sans-serif;
                 }
@@ -149,7 +149,7 @@
                 .title-page-one {
                     margin-top: 5px;
                 }
-                .subTitle-page-one,
+                .subTitle,
                 .note-page-one {
                     font-family: "noto-sans-cjk-kr-light, sans-serif";
                 }
