--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -638,7 +638,14 @@
         &-change-lang-wrapper {
             top: 10px;
         }
+        #side-menu-toggle {
+            right: 20px!important;
+        }
     }
+    
+    .side-menu-container-change-lang-menu {
+    right: 20px !important;
+}
 }
 
 .maxius-logo {
