--- a/src/App.scss
+++ b/src/App.scss
@@ -126,10 +126,16 @@ section {
     font-family: "Roboto-Medium";
     src: url("./Assets/fonts/Roboto-Medium.ttf");
 }
-@media screen and (max-width: 767.98px) {
+@media screen and (max-width: 1024px) {
     #fp-nav.fp-right {
         right: 50px !important;
     }
+}
+@media (max-width: 320px) {
+    #fp-nav.fp-right {
+        right: 20px !important;
+    }
+    
 }
 
 .active-color-dot {
